# django-boilerplate

./: README.md  pyproject.toml
sample/: settings.py  urls.py
testapp/: models.py  serializers.py  urls.py  views.py
testapp/migrations/: 0001_initial.py  0002_rename_description_department_department.py
