[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = ["asqi-dharmendra <dharmendra@asqi.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
